Added a start button to the start a quiz page

--- a/start_quiz.html
+++ b/start_quiz.html
@@ -15,3 +15,5 @@
 			How many of these spectacular sportswomen are you familiar with? Find out and learn more about all of them by completing this quiz!
 			</h2>
 			<input class="myButton" type="submit" value="Start">
+	</body>
+</html>
