Changed the photo and changed the stylesheet.

--- a/end_quiz.html
+++ b/end_quiz.html
@@ -2,14 +2,13 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="normalize.css">
-		<link rel="stylesheet" href="questions.css">
+		<link rel="stylesheet" href="endquiz.css">
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,700">
 		<title>It was never a cape: women in history</title>
 	</head>
 
 	<body>
 		<h1>Great Women in Sports</h1>
-		<img src="photos/wilma_rudolph.jpg">
 		<br>
 			<h2>
 			YOUR RESULTS: -insert result e.g. 10/10-
