Changed the name of the site and quizzes, added photo credits

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 
 	<body>
-		<h1>It was never a cape: women in history</h1>
-		
+		<h1>QUIZZES ABOUT BADASS WOMEN</h1>
+			
 		<br>
 			<p>
 			Growing up we learned about a lot of important people in school. We learned about people who started wars and ended them, people who ruled countries and liberated them. We learned of people who wrote books we still read today, painted paintings that hang on the walls of prominent museums and those who wrote music that is still performed in the world's most spectacular concert halls. 
@@ -23,9 +23,12 @@
 		<br>
 		<h2>Quizzes:</h2>
 			<ul>
-				<li>Great women in sports</li>
+				<li>Scientifc masterminds</li>
+				<li>Sports stars</li>
 				<li>Political heroes</li>
 
-
+		<p class="photo_credit">
+			Photographer unknown. Courtesy of the D.C. Public Library historic image collection.
+			</p>
 	</body>
 </html>
