Added more questions to the sports quiz - not final layout

--- a/questions.html
+++ b/questions.html
@@ -12,17 +12,42 @@
 			<p class="question_text">
 			This is Kathrine Switzer. Which marathon did she become the first woman to complete as a registered participant in 1967?
 			</p>
-			<div class="circular"></div>
+			<img class="circular" src="photos/marathon-switzer-apimages.jpg">
+			
 			<br>
+			<p class="photo_credit">
+			AP Images
+			</p>
 			<br>
-			<input type="radio" name="answers" value="Boston" checked>Boston Marathon
+
+			<input type="radio" name="answers" value="correct" checked>Boston Marathon
 			<br>
-			<input type="radio" name="answers" value="NewYork" checked>New York City Marathon
+			<input type="radio" name="answers" value="incorrect" checked>New York City Marathon
 			<br>
-			<input type="radio" name="answers" value="London" checked>London Marathon
+			<input type="radio" name="answers" value="incorrect" checked>London Marathon
 			<br>
 
 			<input class="myButton" type="submit" value="Submit">
+
+		<h1>Question 2</h1>
+			<p class="question_text">
+			This is Wilma Rudolph. Which of these statements describes her accomplishment in the 1960 summer Olympics?
+			</p>
+			<img class="circular" src="photos/wilma_rudolph.jpg">
+			
+			<br>
+			<br>
+
+			<input type="radio" name="answers" value="incorrect" checked>She was the first woman to win four track and field Olympic gold medals.
+			<br>
+			<input type="radio" name="answers" value="incorrect" checked>She was the first African American woman to win an Olympic gold medal
+			<br>
+			<input type="radio" name="answers" value="correct" checked>She was the first American woman to win three gold medals during a single Olympics.
+			<br>
+
+			<input class="myButton" type="submit" value="Submit">
+
+		
 
 
 	</body>
