Changed some wording on start quiz page.

--- a/start_quiz.html
+++ b/start_quiz.html
@@ -8,12 +8,12 @@
 	</head>
 
 	<body>
-		<h1>Great Women in Sports</h1>
+		<h1>Sports stars</h1>
 		
 		<br>
 			<h2>
 			How many of these spectacular sportswomen are you familiar with? Find out and learn more about all of them by completing this quiz!
 			</h2>
-			<input class="myButton" type="submit" value="Start">
+			<input class="myButton" type="submit" value="Start quiz">
 	</body>
 </html>
