--- a/end_quiz.html
+++ b/end_quiz.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html>
+<html id="endquizhtml">
 	<head>
 		<link rel="stylesheet" href="normalize.css">
-		<link rel="stylesheet" href="endquiz.css">
+		<link rel="stylesheet" href="index.css">
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,700">
 		<title>It was never a cape: women in history</title>
 	</head>
 
-	<body>
+	<body class="bodybackgroundimage">
 		<h1>Great Women in Sports</h1>
 		<br>
 			<h2>
