added id's and classes to merge css files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html id = "indexhtml">
 	<head>
 		<link rel="stylesheet" href="normalize.css">
 		<link rel="stylesheet" href="index.css">
@@ -7,8 +7,8 @@
 		<title>It was never a cape: women in history</title>
 	</head>
 
-	<body>
-		<h1>QUIZZES ABOUT BADASS WOMEN</h1>
+	<body class="bodybackgroundimage">
+		<h1 id="indexh1">QUIZZES ABOUT BADASS WOMEN</h1>
 			
 		<br>
 			<p>
