--- a/questions.html
+++ b/questions.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="normalize.css">
-		<link rel="stylesheet" href="questions.css">
+		<link rel="stylesheet" href="index.css">
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,700">
 		<title>It was never a cape: women in history</title>
 	</head>
@@ -47,7 +47,7 @@
 
 			<input class="myButton" type="submit" value="Submit">
 
-		
+
 
 
 	</body>
