added image credits

--- a/end_quiz.html
+++ b/end_quiz.html
@@ -16,5 +16,9 @@
 			<ol>
 				<li>Correct/incorrect: Kathrine Switzer ran the Boston Marathon in 1967. She was repeatedly attacked by people while running but also had a group of runners around her fighting off those who tried to stop her from finishing. In 2015 46% of the runners were women. Read more about her <a href="https://en.wikipedia.org/wiki/Kathrine_Switzer">here</a>.</li>
 				<li>Correct/incorrect: explanation </li>
+			</ol>
+			<p class="photo_credit">
+				Image by Cassie Kiedrowski via Flickr
+			</p>
 	</body>
 </html>
